smten/share/lib/Smten/Tests/ShouldFail/ClauseArgCount.smtn

module Smten.Tests.ShouldFail.ClauseArgCount where

-- Two clauses have different number of arguments.
foo :: Integer -> Integer -> Integer
foo 0 = \x -> x + 1
foo a b = a + b

